@@ -5,6 +5,9 @@ CHANGES-1.3.txt
 CHANGES IN CUPS V1.3.1
 
 	- Documentation updates.
+	- If a remote printer stopped while a job was being sent, the
+	  local queue would also get stopped and the job re-queued,
+	  resulting in duplicate prints in some cases.
 	- A few Apple-specific job options needed to be omitted when
 	  printing a banner page.
 	- The new peer credential support did not compile on FreeBSD
